--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  intl: ^0.17.0
+  flutter_sticky_header: ^0.6.0
+  crypto: ^3.0.3
+
 
 
   # The following adds the Cupertino Icons font to your application.
