--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.3
-  intl: ^0.17.0
+  image_picker: ^1.0.7
+  shared_preferences: ^2.0.0
+  http: ^1.2.1
+  intl: ^0.19.0
   flutter_sticky_header: ^0.6.0
   crypto: ^3.0.3
+
 
 
 
